alignment fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4213,10 +4213,10 @@ label {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  height: 31rem;
+  height: 30rem;
 }
 .bizzen-project-item.style-two .project-thumbnail img {
-  width: 100%;
+  width: 26rem;
 }
 .bizzen-project-item.style-two .project-thumbnail .hover-content {
   position: absolute;
